--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,58 +1,247 @@
-/* Navbar Container */
-.navbar {
+/**
+ * NAVMAIN
+ */
+
+ .main .nav-main {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 85px;
+    height: 120px;
+    background-color: #FFFFFF;
+    padding: 64px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
-    padding: 0 30px;
     z-index: 1000;
-}
-
-/* Logo */
-.navbar-logo {
-    padding: 15px;
-}
-
-.navbar-logo img {
-    height: 60px;
-}
-
-/* Navbar Menu */
-.navbar-menu {
-    display: grid;
-    grid-template-columns: repeat(6, auto);
-    justify-content: center;
-    gap: 25px;
-    list-style: none;
-    margin: 0;
-    padding: 10px;
-}
-
-.navbar-menu li a {
+    grid-row: 1/2;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .main .nav-mobile {
+    display: none;
+  }
+  
+  .main .nav-main .menu-container {
+    display: flex;
     text-decoration: none;
-    color: black;
-    font-weight: bold;
-    font-size: 22px;
-}
-
-/* Contact Button */
-.navbar-button {
-    text-align: center;
-    padding: 15px;
-}
-
-.navbar-button a {
-    background-color: #007bff;
-    color: white;
-    margin: 60px;
-    padding: 12px 24px;
-    text-decoration: none;
-    border-radius: 35px;
-    font-size: 18px;
-    display: inline-block;
-}
+    align-items: center;
+    overflow: hidden;
+    margin-right: 20px;
+  }
+  
+  .main .nav-main .menu-container li {
+    margin: 0 10px;
+  }
+  
+  .main .nav-main .menu-container li a {
+    font-size: 20.72px;
+    font-weight: 700;
+  }
+  
+  .main .nav-main .menu-container li a:is(:hover, :focus-visible) {
+    color: var(--primary-color);
+  }
+  
+  /* Media queries for navmain */
+  
+  @media (max-width: 1200px) {
+    .main .nav-main .menu-container {
+      display: none;
+    }
+  
+    .main .nav-main .hamburger {
+      cursor: pointer;
+    }
+  
+    .main .nav-main .hamburger span {
+      display: block;
+      height: 4px;
+      width: 30px;
+      background-color: var(--black);
+      margin: 4px 0;
+    }
+  
+    .main .nav-main .hamburger:hover span {
+      background-color: var(--secondary-color);
+    }
+  
+    .main .nav-mobile {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 853px;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: start;
+      background-color: #215379;
+      padding-left: 10px;
+      padding-top: 45px;
+      margin-bottom: 0;
+      z-index: 10000;
+      transform: translateX(-100%);
+      transition: transform 0.5s ease-in-out;
+    }
+  
+    .main .nav-mobile.show {
+      transform: scale(1, 1);
+    }
+  
+    .main .nav-mobile .menu-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 10px;
+      padding: 20px 0;
+    }
+  
+    .main .nav-mobile .btn-container {
+      padding-left: 10px;
+    }
+  
+    .main .nav-mobile .menu-container li {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+  
+    .main .nav-mobile .menu-container li a {
+      color: var(--white);
+      text-decoration: none;
+      font-weight: 600;
+    }
+  
+    .main .nav-mobile .menu-container li a:is(:hover, :focus-visible) {
+      color: var(--primary-color);
+    }
+  
+    .main .nav-main {
+      padding: 64px 100px;
+    }
+  }
+  
+  @media (max-width: 992px) {
+    .main .nav-main .menu-container {
+      display: none;
+    }
+  
+    .main .nav-main .hamburger {
+      cursor: pointer;
+    }
+  
+    .main .nav-main .hamburger span {
+      display: block;
+      height: 4px;
+      width: 30px;
+      background-color: var(--black);
+      margin: 4px 0;
+    }
+  
+    .main .nav-main .hamburger:hover span {
+      background-color: var(--secondary-color);
+    }
+  
+    .main .nav-mobile {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 853px;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: start;
+      background-color: #215379;
+      padding-left: 10px;
+      padding-top: 45px;
+      margin-bottom: 0;
+      z-index: 10000;
+      transform: translateX(-100%);
+      transition: transform 0.5s ease-in-out;
+    }
+  
+    .main .nav-mobile.show {
+      transform: scale(1, 1);
+    }
+  
+    .main .nav-mobile .menu-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 10px;
+      padding: 20px 0;
+    }
+  
+    .main .nav-mobile .btn-container {
+      padding-left: 10px;
+    }
+  
+    .main .nav-mobile .menu-container li {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+  
+    .main .nav-mobile .menu-container li a {
+      color: var(--white);
+      text-decoration: none;
+      font-weight: 600;
+    }
+  
+    .main .nav-mobile .menu-container li a:is(:hover, :focus-visible) {
+      color: var(--primary-color);
+    }
+  
+    .main .nav-main {
+      padding: 64px 100px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .main .nav-main {
+      padding: 64px 50px;
+    }
+  }
+  
+  @media (max-width: 575px) {
+    .main .nav-main {
+      padding: 64px 50px;
+    }
+  }
+  
+  @media (max-width: 560px) {
+    .main .nav-main {
+      padding: 64px;
+    }
+  
+    .main .nav-main .logo-container {
+      width: 50%;
+    }
+  
+    .main .nav-main .logo-container img {
+      width: 95%;
+    }
+  
+    .main .nav-mobile.show {
+      width: 280px;
+    }
+  }
+  
+  @media (max-width: 464px) {
+    .main .nav-main {
+      padding: 64px 30px;
+    }
+  
+    .main .nav-main .logo-container {
+      width: 50%;
+    }
+  
+    .main .nav-main .logo-container img {
+      width: 95%;
+    }
+  }
+  
