--- a/assets/css/careers.css
+++ b/assets/css/careers.css
@@ -75,10 +75,9 @@
 /* Media Queries for Mobile */
 @media (max-width: 768px) {
     #career-section {
-        justify-content: center !important;
-        text-align: center;
+        background-image: url('../images/Careersmobile.png') !important;
         background-size: cover !important;
-        background-position: center !important;
+        background-position: center !important; /* Adjust as needed */
     }
 
     #career-overlay {
@@ -91,7 +90,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        max-width: 90% !important; /* Increase width */
+        width: 100% !important; /* Increase width */
         text-align: center;
     }
 
