--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -114,13 +114,13 @@
 }
 
 .overlay-content li {
-    margin: 15px 0;
+    margin: 15px 10px;
 }
 
 .overlay-content a {
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 /* Mobile View */
